--- a/lib/nib/vendor.styl
+++ b/lib/nib/vendor.styl
@@ -66,6 +66,8 @@ box-shadow()
 
 user-select()
   vendor('user-select', arguments, only: webkit moz ms official)
+  -khtml-user-select none
+  -webkit-touch-callout none
 
 /*
  * Vendor "column-count" support.
